--- a/src/main/resources/templates/admin/expense/expenses.html
+++ b/src/main/resources/templates/admin/expense/expenses.html
@@ -28,7 +28,7 @@
 		            <tbody>
 		                <tr th:each="expense: ${expensesList}">
 						   	<td th:text="${expense.date}"></td>
-						    <td th:inline="text">[[${#numbers.formatDecimal(expense.amount, 0, 'POINT', 0, 'POINT')}]] VND</td>
+						    <td th:inline="text">[[${#numbers.formatDecimal(expense.amount, 0, 'POINT', 0, 'POINT')}]] ₫</td>
 						    <td th:text="${expense.description}"></td>
 						    <td th:text="${expense.category.name}"></td>
 						    <td th:text="${expense.user.username}"></td>
