--- a/src/main/resources/templates/admin/user/create.html
+++ b/src/main/resources/templates/admin/user/create.html
@@ -4,46 +4,46 @@
       	layout:decorate="~{layouts/admin}">   	
 <div layout:fragment="content">
 	<h1 class="h3 mb-2 text-gray-800">Thêm người dùng</h1>
-	<div class="card shadow mb-4">
+	<div class="card shadow mb-4 col-6">
 		<div class="card-body">
 			<form id="uploadFiles" th:action="@{/admin/save-user}" th:object="${user}" method="POST" enctype="multipart/form-data">
 		 		
 		 		<label>Họ tên <sup>*</sup></label>
 		 		<input type="text" th:field = "*{name}"
-		 		placeholder="Nhập họ tên người dùng" class="form-control col-md-6 col-12">
+		 		placeholder="Nhập họ tên người dùng" class="form-control col-12">
 		 		<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger font-italic d-block"></label>
 		 		<div class="mb-4"></div>
 		 		
 		 		<label>Email <sup>*</sup></label>
 		 		<input type="text" th:field = "*{email}"
-		 		placeholder="Nhập email người dùng" class="form-control col-md-6 col-12">
+		 		placeholder="Nhập email người dùng" class="form-control col-12">
 		 		<label th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger font-italic d-block"></label>
 		 		<div class="mb-4"></div>
 		 		
 		 		<label>Số điện thoại <sup>*</sup></label>
 		 		<input type="text" th:field = "*{phone}"
-		 		placeholder="Nhập số điện thoại" class="form-control col-md-6 col-12">
+		 		placeholder="Nhập số điện thoại" class="form-control col-12">
 		 		<label th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="text-danger font-italic d-block"></label>
 		 		<div class="mb-4"></div>
 		 		
 		 		<label for="image">Ảnh <sup>*</sup></label>
 		 		<input type="file" th:name="file" th:value = "*{image}" id="image"
-		 		class="form-control mb-4 col-md-6 col-12" >
+		 		class="form-control mb-4 col-12" >
 		 		
 		 		<label>Tên tài khoản <sup>*</sup></label>
 		 		<input type="text" th:field = "*{username}" 
-		 		placeholder="Nhập tên tài khoản" class="form-control col-md-6 col-12">
+		 		placeholder="Nhập tên tài khoản" class="form-control col-12">
 		 		<label th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="text-danger font-italic d-block"></label>
 		 		<div class="mb-4"></div>
 		 		
 		 		<label>Mật khẩu <sup>*</sup></label>
 		 		<input type="password" th:field = "*{password}" value=""
-		 		placeholder="Nhập mật khẩu" class="form-control col-md-6 col-12">
+		 		placeholder="Nhập mật khẩu" class="form-control col-12">
 		 		<label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger font-italic d-block"></label>
 		 		<div class="mb-4"></div>
 		 		
 		 		<label>Roles</label>
-		 		<div class="mb-4 col-6">
+		 		<div class="mb-4 col-12">
 		 			<div class="custom-control custom-checkbox custom-control-inline"
 		 				th:each="role : ${rolesList}">
 		 				<input type="checkbox" name="roles" class="custom-control-input"
